2002-01-13  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.__unpackConnectArgs): bug
	fixes.  After doing an insert, c.fetchall() returns an empty
	sequence rather than raising an error; c.fetchone() will return
	None in that case.

	* pylibs/PyDO/PyDBI.py (DBIGetConnection): Fixed some painfully
	dumb typos I introduced.

	* SkunkWeb/sample_webdocs/demo/gallery/comp/list_thumbnails.dcmp:
	Use component stack to determine the current path of this
	component, to determine where thumbnails.py is (if not given to
	the component)

	* SkunkWeb/sw.conf.in: documented new mysql service configuration
	variables, and made minor correction to description of
	sessionHandler.

	* SkunkWeb/Services/mysql/__init__.py: modified to use the newly
	refurbished MySQL pylib.

	* pylibs/MySQL/__init__.py: modified to use MySQLdb, optionally
	perform a rollback step, and optionally perform a connection
	validation check before handing out a connection.

	* pylibs/PyDO/PyDBI.py (DBIGetConnection): modified to accept both
	connect strings and dictionaries of connect parameters.

	* pylibs/PyDO/mysqlconn.py: modified to use MySQLdb and take a
	dictionary of connect parameters (for interoperability with the
	MySQL pylib).


2002-01-11  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sample_webdocs/demo/gallery/comp/list_thumbnails.dcmp:
	use the new queryargs argument to <:img:>.

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:img:>}}): Added
	documentation of queryargs argument to <:img:> tag.
	(section{\texttt{<:include:>}}): documented the .inc and .pyinc
	extensions. 

	* SkunkWeb/Services/templating/HTMLTags.py (ImageTag.genCode):
	Modified <:img:> tag to take queryargs.

2002-01-10  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sample_webdocs/demo/index.html: acknowledged the
	existence of the gallery demo.

	* pylibs/Date/Date.py: ISO fix.

2002-01-09  Jacob Smullyan  <smulloni@smullyan.org>
